--- a/src/index.html
+++ b/src/index.html
@@ -212,17 +212,17 @@
         <h2 class='title center'><span class='first'>O</span>rganizer<span class='second'>s</span></h2>
             <div class='row'>
                 <div class='col-6 column'>
-                    <img src='/static/krzysiek.jpg' />
-                    <h3 class='name'><span class='first'>E</span>wa <span class='second'>K</span>rużyńska</h3>
-                    <div class='bio'>
-                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
-                    </div>
-                </div>
-                <div class='col-6 column'>
                     <img src='/static/michal.jpg' />
                     <h3 class='name'><span class='first'>M</span>ichał <span class='second'>K</span>awalec</h3>
                     <div class='bio'>
                       Software engineer at <a href='https://x-team.com'>X-Team</a>, speaker, Haskeller, <a href='https://twitter.com/monad_cat'>FP evangelist</a>, secretly a physicist
+                    </div>
+                </div>
+                <div class='col-6 column'>
+                    <img src='/static/ecia.jpg' />
+                    <h3 class='name'><span class='first'>E</span>wa <span class='second'>K</span>rużyńska</h3>
+                    <div class='bio'>
+                      Monadic Party and Monadic Warsaw organizer, LGBT+ activist
                     </div>
                 </div>
             </div>
