--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
           <p>Monadic Party is a four-days long Haskell summer school. Our vision is to teach in depth with each talk taking between four and six sessions. There are three tracks, one for beginners in Haskell and two aimed at intermediate to advanced Haskell programmers.
 
-          <p>For the attendees that arrive on the 15th, and we have a preparty lined up.</p>
+          <p>For attendees that arrive on the 15th, we have a preparty lined up.</p>
 
           <p>The venue is a recently restored lovely old building at <a href='http://mlynska12.pl/' target='_blank'>Mlynska 12</a> where we have the whole highest floor at our disposal. The only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch, tea and coffee is included in the ticket price.</p>
 
