--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
 
                 <div class='col-4 column'>
                     <img src='/static/gajda.jpg' />
-                    <h3 class='name'><span class='first'>G</span>rzegorz <span class='second'>G</span>ajda</h3>
+                    <h3 class='name'><span class='first'>M</span>ichał <span class='second'>G</span>ajda</h3>
                     <div class='bio'>
                       Promoting Haskell for Data Scientists
                     </div>
