--- a/src/index.html
+++ b/src/index.html
@@ -133,10 +133,10 @@
                 </div>
 
                 <div class='col-4 column'>
-                    <img src='/static/miszczyszyn.jpg' />
-                    <h3 class='name'><span class='first'>M</span>ichał <span class='second'>M</span>iszczyszyn</h3>
+                    <img src='/static/phil.jpg' />
+                    <h3 class='name'><span class='first'>P</span>ilip <span class='second'>W</span>adler</h3>
                     <div class='bio'>
-                      Full Stack Developer at <a href='https://x-team.com'>X-Team</a>
+                      Professor of Theoretical Computer Science at the University of Edinburgh
                     </div>
                 </div>
             </div>
@@ -173,7 +173,13 @@
                       Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
                     </div>
                 </div>
-                <div class='col-4 column'></div>
+                <div class='col-4 column'>
+                    <img src='/static/miszczyszyn.jpg' />
+                    <h3 class='name'><span class='first'>M</span>ichał <span class='second'>M</span>iszczyszyn</h3>
+                    <div class='bio'>
+                      Full Stack Developer at <a href='https://x-team.com'>X-Team</a>
+                    </div>
+                </div>
                 <div class='col-4 column'>
                     <img src='/static/laurens.jpg' />
                     <h3 class='name'><span class='first'>L</span>aurens <span class='second'>D</span>uijvesteijn</h3>
