--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
 
                 <div class='col-4 column'>
                     <img src='/static/phil.jpg' />
-                    <h3 class='name'><span class='first'>P</span>ilip <span class='second'>W</span>adler</h3>
+                    <h3 class='name'><span class='first'>P</span>hilip <span class='second'>W</span>adler</h3>
                     <div class='bio'>
                       Professor of Theoretical Computer Science at the University of Edinburgh
                     </div>
