added info about the train

--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,8 @@
 
           <h2 class='title left'><span class='first'>G</span>etting <span class='second'>T</span>here</h2>
 
+          <p>When travelling from ZuriHac, we highly recommend taking a train to help the environment a bit. There is a train on the 15th of June, leaving Zurich at 9am and arriving in Poznań at 8:27pm (changes in Basel and Berlin). When buying well in advance, it costs 99,90 Euros. You can book it <a href='https://www.bahn.com/en/view/index.shtml' target='_blank'>here</a>.</p>
+
           <p>We will hold the summer school at <a href='https://goo.gl/maps/DMHV2GN2Nk12' target='_blank'>Mlynska 12</a>, Poznan, Poland. The venue is in the Old Town, a walking distance from the town square. We would love to help you with choosing a place to stay. If you have any questions, please email us at <a href='mailto:team@monadic.party'>team@monadic.party</a>.</p>
 
           <p>Inside the city of Poznan there is a good <a href='http://www.ztm.poznan.pl/en/#planner' target='_blank'>public transporation system</a> with a dense network throughout the city.</p>
