closed CFP and scholarships

--- a/src/index.html
+++ b/src/index.html
@@ -84,10 +84,7 @@
 
               <p>We are deligted to offer a means based scholarship programme. If you are unable to attend the summer school because of financial reasons, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself.</p>
 
-              <h4 class='external-btn'>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/1WUg1UTIOodSxjzxwFk0dToQNsLtJqtxc8GeK2cbhoUM/" target='_blank'>Apply for a scholarship</a>
-              </h4>
-              <h5>Deadline: 29th of February 2020</h5>
+              <p>The scholarship applications are now closed, if you have applied, expect a message from us between 23rd and 27th of March.</p>
           </div>
       </div>
 
@@ -192,7 +189,7 @@
             </div>
 
             <div class='row'>
-              <h2 class='wide'>More speakers revealed after the CFP closes</h2>
+              <h2 class='wide'>More speakers revealed after the CFP completes</h2>
             </div>
         </div>
     </div>
@@ -207,11 +204,7 @@
 
         <p>Accommodation in a hotel in Poznań and a ticket to the event is covered for all speakers.</p>
 
-        <h2 class='external-btn'>
-          <a class="button button-primary" href="https://docs.google.com/forms/d/1RJu05ITlTjKZKomTFzPhBVmyUzPCi6QyaEf3Q9kiUeY" target='_blank'>Submit a proposal</a>
-        </h2>
-
-        <h4>Deadline: 29th of February 2020</h4>
+        <h4>CFP applications closed</h4>
       </div>
     </div>
 
