--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,7 @@
                     <img src='/static/tom.jpg' />
                     <h3 class='name'><span class='first'>T</span>om Sydney <span class='second'>K</span>erckhove</h3>
                     <div class='bio'>
-                      Technical Lead at <a href='https://www.fpcomplete.com/'>FP Complete</a>
+                      Professional Weirdo. Technical Leader and Engineering Manager at <a href='https://www.fpcomplete.com'>FP Complete</a>
                     </div>
                 </div>
                 <div class='col-4 column'>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/maciej_kowalski.jpg' />
                     <h3 class='name'><span class='first'>M</span>aciej <span class='second'>K</span>owalski</h3>
                     <div class='bio'>
                       My passion for programming oscillates between frontend and backend. So I am the middleman
@@ -237,6 +237,27 @@
         <h1 class='title'><span class='first'>T</span>alks</h1>
 
         <div id='talk-titles'>
+          <div class='talk'>
+            <div class='header'>
+              <h4 class='author'>Christophe Scholliers:<h4>
+              <h4 class='title'>Learning Haskell: a project-based approach - <b>6 hours</b></h4>
+              <div class='level'>
+                <span class='badge badge-success'>Beginner</span>
+              </div>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                <p>This track consists of a crash introduction to Haskell, in two parts of theory and practice. In the theory, we start from scratch and finish with the concepts of functions, type classes and algebraic data types. Armed with this knowledge we switch to the exercise track where we will implement two small games: Snake and Tetris. We will be using an online exercise platform which will guide you through the various stages of implementing the games.</p>
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Professor Computer Science at Ghent University, teaching functional programming, foundations of programming languages, logic programming and software engineering.
+              </div>
+            </div>
+          </div>
           <div class='talk'>
             <div class='header'>
               <h4 class='author'>Ryan Moore:<h4>
@@ -276,7 +297,7 @@
 
               <h4>About the speaker</h4>
               <div class='speaker'>
-                Professional Weirdo, more at <a href='https://cs-syd.eu' target='_blank'>https://cs-syd.eu</a>
+                Professional Weirdo. Technical Leader and Engineering Manager at FP Complete.
               </div>
             </div>
           </div>
