added a covid note

--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,16 @@
 
     <div class='about-us'>
       <div class='container'>
+          <div class='covid'>
+            <h2>COVID-19</h2>
+            <p>With the COVID pandemic happening around the world, there is a large chance of our summer school not being able to take place in June. Poland currently has an international travel ban and all gatherings of more than fifty people are forbidden.</p>
+
+<p>Taking this into account and thinking about the safety of our speakers and attendees, we will be postponing the summer school. Our current plan is to have it in October, though it is hard to predict things exactly at this stage. Because of that we have issued full refunds to the attendees.</p>
+
+<p>This is a really hard decision to make and we are not taking it lightly, especially given all the preparation and hard work that made the 2020 edition possible. We want to give a big thank you for all your support. </p>
+          </div>
+
+
           <h2 class='title right'><span class='first'>A</span>bout the <span class='second'>e</span>vent</h2>
           <p>Monadic Party is a four-days long Haskell summer school. Our vision is to teach in depth with each talk taking between four and six sessions. There are three tracks, one for beginners in Haskell and two aimed at intermediate to advanced Haskell programmers.
 
@@ -750,38 +760,6 @@ Time allowing, I will also show the benefits of using Classical Logic for struct
             </div>
 
           </div>
-        </div>
-    </div>
-
-    <div class='sign-up'>
-        <div class='container'>
-
-          <div id="eventbrite-widget-container-85615216417" class='eb-container'></div>
-
-            <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
-
-            <script type="text/javascript">
-                var exampleCallback = function() {
-                    console.log('Order complete!');
-                };
-
-                window.EBWidgets.createWidget({
-                    // Required
-                    widgetType: 'checkout',
-                    eventId: '85615216417',
-                    iframeContainerId: 'eventbrite-widget-container-85615216417',
-
-                    // Optional
-                    iframeContainerHeight: 650,  // Widget height in pixels. Defaults to a minimum of 425px if not provided
-                    onOrderComplete: exampleCallback  // Method called when an order has successfully completed
-                });
-            </script>
-
-
-            <div class='col-12 column email'>
-                Got a question? Email us at
-                <a href='mailto:team@monadic.party'>team@monadic.party</a>
-            </div>
         </div>
     </div>
 
